fix author page spacing issue, fix commerce styles overlap

--- a/wp-content/themes/twentyeleven/BlogStyle.less
+++ b/wp-content/themes/twentyeleven/BlogStyle.less
@@ -1199,6 +1199,16 @@ a:active img[class*="wp-image-"],
 	background: #f7f7f7;
 }
 /* Author Info */
+.author #primary{
+	position:relative;
+	top:-616px;	
+}
+.author #secondary{
+	position:relative;
+	top:35px;	
+	left:-27px;
+	float:right;
+}
 #author-info{
 	.positionSize(relative, 0px, 80px, 901px);
 	margin-top:-150px;
@@ -1362,6 +1372,9 @@ blockquote.pull{
 }
 .author #main{
 	top:97px;
+}
+.archive #main{
+	top:110px;
 }
 /* --------------------- Search -------------------------- */
 .search{
